# django-structured-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: sitewide.md  template-tags.md  view-mixin.md
structured_data/: __init__.py  apps.py  tests.py  util.py  views.py
structured_data/templatetags/: jsonld.py  meta.py  opengraph.py  twitter.py
structured_data/tests/: test_templatetags.py
